# horrible-ttt

./: .gitignore  Cargo.toml  build.rs  build_readme.txt  test.txt
assets/: font_info.csv
assets/shaders/: bg_frag.glsl  text_frag.glsl  text_vtex.glsl
c/: wrapper.h
c/freetype/: freetype.h  freetyped.lib  ft2build.h  ftadvanc.h  ftbdf.h  ftbitmap.h  ftcache.h  ftcid.h  fterrors.h  ftgxval.h  ftlcdfil.h  ftlogging.h  ftmodapi.h  ftmoderr.h  ftparams.h  ftpfr.h  ftsnames.h  ftstroke.h  ftwinfnt.h  tttables.h  tttags.h
c/freetype/config/: ftconfig.h  mac-support.h
dependencies/freetype/: ftbbox.h  ftbzip2.h  ftcolor.h  ftdriver.h  ftfntfmt.h  ftgasp.h  ftglyph.h  ftgzip.h  ftincrem.h  ftlist.h  ftlzw.h  ftmm.h  ftotval.h  ftoutln.h  ftrender.h  ftsizes.h  ftsynth.h  fttrigon.h  fttypes.h  t1tables.h
dependencies/freetype/config/: ftheader.h  ftoption.h  ftstdlib.h
shaders/: color.glsl  frag.glsl  frag2.glsl  line_frag.glsl  textest.glsl  texture.glsl  vtex.glsl
src/: .draw.rs.un~  .main.rs.un~  .util.rs.un~  assets.rs  atlas_drawer.rs  draw.rs  draw.rs~  game.rs  input.rs  main.rs  main.rs~  movement.rs  shader.rs  state.rs  text.rs  texture.rs  time.rs  ui.rs  util.rs  util.rs~
