[package]
name = "first-test"
version = "0.1.0"
edition = "2021"
default-run = "first-test"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cc = "1.0.83"
csv = "1.3.0"
gl_matrix = "0.0.2"
glium = "0.33.0"
image = "0.24.7"
serde = { version = "1.0", features = ["derive"] }
winit = "*"
zip_archive = "1.2.2"

[build-dependencies]
bindgen = "0.65.1"
